--- a/devs4j-tweets-feed/src/main/resources/application.yml
+++ b/devs4j-tweets-feed/src/main/resources/application.yml
@@ -4,6 +4,24 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/twitter
+  cloud:
+    stream:
+      source: tweetBinding-out-0
+      kafka:
+        binder:
+          brokers: localhost:9092
+          replicationFactor: 1
+      bindings:
+        tweetBinding-out-0:
+          destination: tweets
 server:
   port: 8086
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - metrics
+        
+        
