--- a/devs4j-twitter-timeline-user/src/main/resources/application.yml
+++ b/devs4j-twitter-timeline-user/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: timeline-user
+  output:
+    ansi:
+      enabled: ALWAYS    
   data:
     mongodb:
       uri: mongodb://localhost:27017/twitter
@@ -12,13 +15,22 @@ spring:
           #producer;processor;consumer
       kafka:
         binder:
-          brokers: localhost:9092
+          brokers: raspberry:9092
           replicationFactor: 1
       bindings:
         TweetConsumer-in-0:
           destination: tweets
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://raspberry:9411
+    
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://raspberry:8761/eureka
+    
+  instance:
+    prefer-ip-address: true
+        
 server:
   port: 8087
 
@@ -26,8 +38,31 @@ management:
   endpoints:
     web:
       exposure:
-        include:
-        - metrics
+        include: "*"
+  zipkin:
+    tracing:
+      endpoint: http://raspberry:9411/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0
+  metrics:    
+    distribution:
+      percentiles-histogram:
+        greeting: true
+        http:
+          server:            
+            requests: true
+
+
+logging:
+  pattern:
+    level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+  level:
+      org:
+        springframework:
+          web:
+            servlet:
+              DispatcherServlet: DEBUG
 
 redis:
-  address: redis://192.168.0.15:6379        
+  address: redis://raspberry:6379        
