--- a/devs4j-tweets-feed/src/main/resources/application.yml
+++ b/devs4j-tweets-feed/src/main/resources/application.yml
@@ -19,6 +19,9 @@ spring:
           destination: tweets
   zipkin:
     baseUrl: https://192.168.99.100:9411/
+  sleuth:
+    async:
+      enabled: true
 
 eureka:
   client:
@@ -36,26 +39,3 @@ management:
     web:
       exposure:
         include: "*"
-  zipkin:
-    tracing:
-      endpoint: http://raspberry:9411/api/v2/spans
-  tracing:
-    sampling:
-      probability: 1.0
-  metrics:    
-    distribution:
-      percentiles-histogram:
-        greeting: true
-        http:
-          server:            
-            requests: true
-
-logging:
-  pattern:
-    level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
-  level:
-      org:
-        springframework:
-          web:
-            servlet:
-              DispatcherServlet: DEBUG
